...
                  ? Icons.bookmark_remove_rounded
                  : Icons.bookmark_add_rounded,
            ),
            label: Text(
              controller.isSubscribed.value
                  ? 'Unsubscribe'
                  : 'Subscribe to Event',
            ),
            style: ElevatedButton.styleFrom(
              padding: const EdgeInsets.symmetric(vertical: 16),
              backgroundColor:
                  controller.isSubscribed.value ? Colors.red : null,
              disabledBackgroundColor: Colors.grey.shade300,
...
